fix: layout problem of detail page

--- a/src/css/Details.module.css
+++ b/src/css/Details.module.css
@@ -3,7 +3,7 @@
 }
 
 .back{
-    position: absolute;
+    position: fixed;
     height: 20px;
     top: 67px;
     left: 15px;
@@ -24,13 +24,14 @@
 }
 
 .navbarLayout{
+    width: 100%;
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: white;
     box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
-    position: relative;
+    position: fixed;
     z-index: 4;
 }
 
@@ -50,4 +51,8 @@
 .navbarContainer a:nth-child(2){
     border-left: 2px solid black;
     border-right: 2px solid black;
+}
+
+.space2{
+    height: 50px;
 }
